bad/add_invalid_types_void_bool.example_compiler_output
ERROR
[1mbad/add_invalid_types_void_bool.lat:5:8: [1;31merror: [0;1maddition is defined only for int values or string values, not `void` and `boolean`[m
	foo() + true;
	      [1;32m^[m
